# AnroidIosJNI

./: Readme.md
Iacpp/app/: .gitignore  CMakeLists.txt  build.gradle  iosbuild.sh
Iacpp/app/src/androidTest/java/com/sheshu/iacpp/: ExampleInstrumentedTest.java
Iacpp/app/src/main/: AndroidManifest.xml
Iacpp/app/src/main/cpp/ContactsCore/api/: ContactsCoreApi.cpp  ContactsCoreApi.h  ContactsCoreApi.hpp
Iacpp/app/src/main/cpp/ContactsCore/model/: Contact.cpp  Contact.hpp
Iacpp/app/src/main/cpp/ContactsCore/webservice/: ContactsWebService.cpp  ContactsWebService.h  ContactsWebService.hpp
Iacpp/app/src/main/cpp/ContactsJni/: contactsAndroidLog.h  contactsSdkJni.cpp
Iacpp/app/src/main/cpp/JsonLib/: JSON.cpp  JSON.h  JSON.hpp  JSONValue.cpp  JSONValue.h  JSONValue.hpp
Iacpp/app/src/main/java/com/sheshu/iacpp/controller/: ContactsController.java  Controller.java
Iacpp/app/src/main/java/com/sheshu/iacpp/model/: ContactsListener.java  ContactsSDK.java  JContact.java
Iacpp/app/src/main/java/com/sheshu/iacpp/view/: ContactListActivity.java  ContactListActivityFragment.java  ContactsListAdapter.java
Iacpp/app/src/main/res/layout/: activity_contact_list.xml  contacts_row.xml  fragment_contact_list.xml
Iacpp/app/src/main/res/menu/: menu_contact_list.xml
Iacpp/app/src/main/res/values/: strings.xml
Iacpp/app/src/test/java/com/sheshu/iacpp/: ExampleUnitTest.java
Iacpp/gradle/wrapper/: gradle-wrapper.properties
IacppI/: ContactsWebService.cpp  ContactsWebService.h
IacppI/IacppI/: AppDelegate.h  AppDelegate.m  Contact.cpp  Contact.hpp  ContactsApiIos.cpp  ContactsApiIos.hpp  ContactsCoreApi.cpp  ContactsCoreApi.hpp  ViewController.h  ViewController.mm  main.m
IacppI/IacppI.xcodeproj/: project.pbxproj
IacppI/IacppI.xcodeproj/project.xcworkspace/: contents.xcworkspacedata
IacppI/IacppI.xcodeproj/project.xcworkspace/xcuserdata/Sheshu.xcuserdatad/: UserInterfaceState.xcuserstate
IacppI/IacppI.xcodeproj/xcuserdata/Sheshu.xcuserdatad/xcschemes/: ContactsCoreLib.xcscheme  IacppI.xcscheme  xcschememanagement.plist
